# dance-crm

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 011c90cb75f8_remove_teacher_user_and_update_.py  32345db66137_create_schedule_and_lessons.py  439298b4069b_add_payments.py  45e337da56f7_create_subscription_extensions.py  59e1845fbd01_create_branches_and_halls.py  9d88a79923d7_create_teachers_and_dance_styles.py  b8c6664eef82_create_groups_and_group_memberships.py  c43f3dc502be_add_timezone_to_group_membership_dates.py  c8e2dd20576d_create_subscription_plans.py  eb28eaebb8df_create_users.py
app/: main.py
app/core/: config.py  logging.py
app/db/: base.py  models.py  session.py
app/modules/: router.py
app/shared/: enums.py  repository.py  schemas.py
docker/: entrypoint.sh
scripts/: create_owner.py
tests/: conftest.py  test_health.py
tests/attendance/: test_attendance.py
tests/auth/: test_auth.py
tests/branches/: test_branches.py
tests/dance_styles/: test_dance_styles.py
tests/groups/: test_groups.py
tests/halls/: test_halls.py
tests/parents/: test_parents.py
tests/payments/: test_payments.py
tests/reports/: test_dependencies.py  test_router.py  test_service.py
tests/schedule/: test_schedule.py
tests/students/: test_students.py
tests/subscription_plans/: test_subscription_plans.py
tests/subscriptions/: test_subscription_extensions.py  (+1 more)
(+80 files in other folders)
