[project]
name = "dance-crm"
version = "0.1.0"
requires-python = ">=3.14"

[tool.black]
line-length = 120
target-version = ["py314"]

extend-exclude = '''
/(
    \.venv
  | venv
  | alembic
  | docker
  | \.git
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 314

skip = [
    ".venv",
    "venv",
    "alembic",
    "docker",
    ".git",
    "__pycache__",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

norecursedirs = [
    ".venv",
    "venv",
    "alembic",
    "htmlcov",
]

addopts = [
    "-rE",
    "-vv",
    "--show-capture=no",
    "--disable-warnings",
    "-p",
    "no:cacheprovider",
]

testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

python_functions = [
    "test_*",
]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"